Fixed some of the routing. Added a text field for user input for ingredients. Added the header and footer templates.

--- a/RecipeWebsite/src/app/app.component.html
+++ b/RecipeWebsite/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-    <a routerLink="test">Test stuff</a>
-  </h1>
-  <router-outlet></router-outlet>
-</div>
+<app-header></app-header>
+
+<h2>Welcome to {{ title }}!</h2>
+
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
