--- a/RecipeWebsite/src/app/components/newpage/newpage.component.html
+++ b/RecipeWebsite/src/app/components/newpage/newpage.component.html
@@ -1,3 +1,6 @@
+Input ingredients:<br>
+<input type="text" id="ing" [(ngModel)]="ing"/> <br>
+<button (click)="getRecipes(ing)">Click me </button> <br>
 <div *ngFor="let user of stuff?.hits">
   {{ user.recipe.label }}: {{ user.recipe.source }}
 </div>
