--- a/RecipeWebsite/src/app/components/recipeinsert/recipeinsert.component.html
+++ b/RecipeWebsite/src/app/components/recipeinsert/recipeinsert.component.html
@@ -1,5 +1,7 @@
 Enter your recipe:
 <br> <br>
+Username: <input type="text" id="username" [(ngModel)]="username"/> <br>
+<br>
 Name: <input type="text" id="name" [(ngModel)]="name"/> <br>
 <br>
 Description: <input type="text" id="desc" [(ngModel)]="desc"/> <br>
