--- a/RecipeWebsite/src/app/app.component.html
+++ b/RecipeWebsite/src/app/app.component.html
@@ -1,7 +1,11 @@
-<app-header></app-header>
+<body>
 
-<h2>Welcome to {{ title }}!</h2>
+<app-header></app-header>
 
 <router-outlet></router-outlet>
 
+<!--
 <app-footer></app-footer>
+-->
+
+</body>
