--- a/RecipeWebsite/src/app/components/header/header.component.html
+++ b/RecipeWebsite/src/app/components/header/header.component.html
@@ -1,3 +1,26 @@
-<p>
-  header goes here!
-</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand">Recipe App Stuff</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="javascript:void(0)" (click)="goToLogin()">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/test">Search Recipes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/createrecipe">Create Recipes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile">Profile</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
