--- a/RecipeWebsite/src/app/components/login/login.component.html
+++ b/RecipeWebsite/src/app/components/login/login.component.html
@@ -1,8 +1,16 @@
-Enter your login information:
-<br> <br>
-Username: <input type="text" id="username" [(ngModel)]="username"/> <br>
-<br>
-Password: <input type="password" id="password" [(ngModel)]="password"/> <br>
-<br>
-<button (click)="loginUser()">Login </button> <br>
+<body>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Username</label>
+        <input type="username" class="form-control" id="username" [(ngModel)]="username" placeholder="Username">
+    </div>
+
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="password" [(ngModel)]="password" placeholder="Password">
+    </div>
+
+    <button type="button" (click)="loginUser()" class="btn btn-primary">Login</button>
+
+</body>
+
 
