--- a/RecipeWebsite/src/app/components/register/register.component.html
+++ b/RecipeWebsite/src/app/components/register/register.component.html
@@ -1,16 +1,31 @@
-Enter your registration information:
-<br> <br>
-Username: <input type="text" id="username" [(ngModel)]="username"/> <br>
-<br>
-Password: <input type="password" id="password" [(ngModel)]="password"/> <br>
-<br>
-ID: <input type="text" id="user_id" [(ngModel)]="user_id"/> <br>
-<br>
-Email: <input type="text" id="email" [(ngModel)]="email"/> <br>
-<br>
-Age: <input type="text" id="age" [(ngModel)]="age"/> <br>
-<br>
-Name: <input type="text" id="name" [(ngModel)]="name"/> <br>
-<br>
+    Enter your registration information: <br> <br>
 
-<button (click)="registerUser()">Register! </button> <br>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Username</label>
+        <input type="text" class="form-control" id="user" [(ngModel)]="username" placeholder="Username">
+    </div>
+
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="password" [(ngModel)]="password" placeholder="Password">
+    </div>
+
+    <div class="form-group">
+        <label for="exampleInputPassword1">Email</label>
+        <input type="text" class="form-control" id="email" [(ngModel)]="email" placeholder="Email">
+    </div>
+        
+    <div class="form-group">
+        <label for="exampleInputPassword1">Age</label>
+        <input type="text" class="form-control" id="age" [(ngModel)]="age" placeholder="Age">
+    </div>
+        
+    <div class="form-group">
+        <label for="exampleInputPassword1">Name</label>
+        <input type="text" class="form-control" id="name" [(ngModel)]="name" placeholder="Name">
+    </div>
+    
+    <div style="text-align:center;">
+        <button type="button" class="test" (click)="registerUser()" class="btn btn-primary">Register!</button>
+    </div>
+
