--- a/RecipeWebsite/src/app/components/profile/profile.component.html
+++ b/RecipeWebsite/src/app/components/profile/profile.component.html
@@ -9,6 +9,8 @@
 
   <div *ngFor="let recipe of userRecipes">
 
-    {{ recipe.label }} from {{ userInfo.userName }}
-    
-  </div>
+    {{ recipe.label }}.
+    <button type="button" (click)="deleteRecipe(recipe.recipeId)" class="btn btn-primary btn-sm">Delete recipe</button> 
+    <button type="button" (click)="updateRecipe(recipe)" class="btn btn-primary btn-sm">Edit recipe</button>
+
+  </div> <br>
