Existence is pain when working with angular
a

--- a/RecipeWebsite/src/app/components/home/home.component.css
+++ b/RecipeWebsite/src/app/components/home/home.component.css
@@ -1,10 +1,7 @@
-p {
-    font-family: monospace;
-    font-variant: small-caps;
-    font-stretch: ultra-expanded;
-    font-size: 40px;
-}
 
-.test {
-    width: 500px;
-}
+
+    .jumbotron {
+      background-size: cover;
+      padding-top: 10%;
+      padding-bottom: 20%;
+    }
