--- a/RecipeWebsite/src/app/components/header/header.component.html
+++ b/RecipeWebsite/src/app/components/header/header.component.html
@@ -1,22 +1,20 @@
-<nav class="navbar  navbar-expand-lg navbar-dark bg-dark">
-     <a class="navbar-brand" href="/"> Recipe In Progress</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand">Recipe App Stuff</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-          <a class="nav-link" href="/test">Search Recipes</a>
-        </li> 
-		
-        <li class="nav-item " *ngIf="!loggedIn">
-          <a class="nav-link active" href="javascript:void(0)" (click)="goToLogin()">Login</a>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active" *ngIf="!loggedIn">
+          <a class="nav-link" href="javascript:void(0)" (click)="goToLogin()">Login</a>
         </li>
         <li class="nav-item" *ngIf="!loggedIn">
-          <a class="nav-link active" href="javascript:void(0)" (click)="goToRegister()">Register</a>
+          <a class="nav-link" href="javascript:void(0)" (click)="goToRegister()">Register</a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link" href="/test">Search Recipes</a>
+        </li>
         <li class="nav-item" *ngIf="loggedIn">
           <a class="nav-link" href="/createrecipe">Create Recipes</a>
         </li>
@@ -27,11 +25,5 @@
           <a class="nav-link" href="javascript:void(0)" (click)="logout()">Logout</a>
         </li>
       </ul>
-
-
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
     </div>
- </nav>
+  </nav>
