Revert "Existence is pain when working with angular"
This reverts commit b57eb83499310c68ecfb390f7432c610f9468635.

--- a/RecipeWebsite/src/app/components/home/home.component.css
+++ b/RecipeWebsite/src/app/components/home/home.component.css
@@ -1,7 +1,10 @@
+p {
+    font-family: monospace;
+    font-variant: small-caps;
+    font-stretch: ultra-expanded;
+    font-size: 40px;
+}
 
-
-    .jumbotron {
-      background-size: cover;
-      padding-top: 10%;
-      padding-bottom: 20%;
-    }
+.test {
+    width: 500px;
+}
