--- a/RecipeWebsite/src/app/components/login/login.component.html
+++ b/RecipeWebsite/src/app/components/login/login.component.html
@@ -1,8 +1,4 @@
-<div class="jumbotron">
-    <div class="container">
-        <div class="row">       
-            <div class="col-md-6 offset-md-3">
-
+<body>
     <div class="form-group">
         <label for="exampleInputPassword1">Username</label>
         <input type="username" class="form-control" id="username" [(ngModel)]="username" placeholder="Username">
@@ -15,7 +11,6 @@
 
     <button type="button" (click)="loginUser()" class="btn btn-primary">Login</button>
 
-            </div>
-        </div>
-    </div>
-</div>
+</body>
+
+
