--- a/RecipeWebsite/src/app/components/login/login.component.html
+++ b/RecipeWebsite/src/app/components/login/login.component.html
@@ -1,4 +1,10 @@
-<body>
+<div class="jumbotron">
+    <div class="container">
+        <div class="row">       
+            <div class="col-md-6 offset-md-3">
+    <h3>Login</h3>
+
+
     <div class="form-group">
         <label for="exampleInputPassword1">Username</label>
         <input type="username" class="form-control" id="username" [(ngModel)]="username" placeholder="Username">
@@ -11,6 +17,7 @@
 
     <button type="button" (click)="loginUser()" class="btn btn-primary">Login</button>
 
-</body>
-
-
+            </div>
+        </div>
+    </div>
+</div>
