--- a/RecipeWebsite/src/app/components/recipe-details/recipe-details.component.html
+++ b/RecipeWebsite/src/app/components/recipe-details/recipe-details.component.html
@@ -1,12 +1,7 @@
-  {{ recipe.label }} <br>
-  This recipe produces {{ recipe.yield }} servings. <br>
-  This recipe can be found from {{ recipe.source }} at {{ recipe.url }}. <br>
-  This recipe accomodates the following dietary restrictions:
-  <div *ngFor="let diet of recipe?.healthLabels">
-    <ul>
-      <li>{{ diet }}</li>
-    </ul>
-  </div>
+  This recipe is: {{ recipe.label }} <br>
+  This recipe produces {{ recipe.servings }} servings. <br>
+  This recipe can be found from {{ recipe.author }} at {{ recipe.url }}. <br>
+
 
   The recipe requires the following ingredients:
   <div *ngFor="let ing of recipe?.ingredientLines">
@@ -15,4 +10,12 @@
       </ul>
   </div>
 
-  There are {{ recipe.calories }}. <br>
+  There are {{ recipe.calories }} calories in this recipe. <br>
+  The rating is {{ recipe.rating }}.
+  <br>
+  Rate recipe? <br>
+  <button type="button" (click)="rateRecipe(1)" class="btn btn-primary btn-sm">1</button>
+  <button type="button" (click)="rateRecipe(2)" class="btn btn-primary btn-sm">2</button>
+  <button type="button" (click)="rateRecipe(3)" class="btn btn-primary btn-sm">3</button>
+  <button type="button" (click)="rateRecipe(4)" class="btn btn-primary btn-sm">4</button>
+  <button type="button" (click)="rateRecipe(5)" class="btn btn-primary btn-sm">5</button>
