--- a/RecipeWebsite/src/app/components/header/header.component.html
+++ b/RecipeWebsite/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="javascript:void(0)" (click)="goToRegister()">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/test">Search Recipes</a>
+          <a class="nav-link" href="/search">Search Recipes</a>
         </li>
         <li class="nav-item" *ngIf="loggedIn">
           <a class="nav-link" href="/createrecipe">Create Recipes</a>
