--- a/RecipeWebsite/src/app/components/home/home.component.html
+++ b/RecipeWebsite/src/app/components/home/home.component.html
@@ -1,18 +1,13 @@
-<div class="jumbotron">
-  <div class="container">
-      <div class="row">       
-          <div class="col-md-6 offset-md-3">
-      <h3>SEARCH</h3>
-      <div class="form-group"><div class="form-group row">
-          <input type="text" class="form-control" id="ing" placeholder=" ie Chicken with Rice" [(ngModel)]="ing">
-      </div>
-    </div>
-      <button type="button" (click)="loginUser()" class="btn btn-primary btn-lg">Search Recipes!</button>
-      <h3>Register</h3>
-     <button type="button" [routerLink]="['/register']" class="btn btn-primary btn-lg">Register an Account</button>
-          </div>
-      </div>
-  </div>
+<div>
+    <p>RECIPE IN PROGRESS</p>
+
+    <img src="assets/boo.png"> <br><br>
+
+      <button type="button" [routerLink]="['/search']" class="btn btn-primary btn-lg">Search Recipes</button> <br><br>
+      <button type="button" *ngIf="!loggedIn" [routerLink]="['/register']" class="btn btn-primary btn-lg">Register an Account</button> <br><br>
+      <button type="button" *ngIf="!loggedIn" [routerLink]="['/login']" class="btn btn-primary btn-lg">Login</button>
 </div>
+
+
 
 
