--- a/RecipeWebsite/src/app/components/recipe-details/recipe-details.component.html
+++ b/RecipeWebsite/src/app/components/recipe-details/recipe-details.component.html
@@ -1,4 +1,4 @@
-  This recipe is: {{ recipe.label }} <br>
+  This is: {{ recipe.label }} <br>
   This recipe produces {{ recipe.servings }} servings. <br>
   This recipe can be found from {{ recipe.author }} at {{ recipe.url }}. <br>
 
@@ -6,17 +6,17 @@
   The recipe requires the following ingredients:
   <div *ngFor="let ing of recipe?.ingredients">
       <ul>
-        <li>{{ ing.text }}</li> <br>
+        <li>{{ ing.text }}</li>
         <button type="button" (click)="addIngredientToCart(ing.text)" class="btn btn-primary btn-sm">Add ingredient to shopping cart.</button>
       </ul>
   </div>
 
   There are {{ recipe.calories }} calories in this recipe. <br>
-  The rating is {{ recipe.rating }}.
-  <br>
-  Rate recipe? <br>
+  <div *ngIf="recipe.recipeId != -1">
+  The rating is {{ recipe.rating }}. Rate recipe? <br>
   <button type="button" (click)="rateRecipe(1)" class="btn btn-primary btn-sm">1</button>
   <button type="button" (click)="rateRecipe(2)" class="btn btn-primary btn-sm">2</button>
   <button type="button" (click)="rateRecipe(3)" class="btn btn-primary btn-sm">3</button>
   <button type="button" (click)="rateRecipe(4)" class="btn btn-primary btn-sm">4</button>
   <button type="button" (click)="rateRecipe(5)" class="btn btn-primary btn-sm">5</button>
+</div>
