--- a/RecipeWebsite/src/app/components/recipe-details/recipe-details.component.html
+++ b/RecipeWebsite/src/app/components/recipe-details/recipe-details.component.html
@@ -1,7 +1,18 @@
-  This is: {{ recipe.label }} <br>
-  This recipe produces {{ recipe.servings }} servings. <br>
-  This recipe can be found from {{ recipe.author }} at {{ recipe.url }}. <br>
+  <br>
+  <div style="text-align:center;">
+    <h2>{{ recipe.label }} </h2>
+    <img *ngIf="isThereImage()" [src]=recipe.image> <br><br>
+    <div *ngIf="isThereUrl()">
+      This recipe can be found from {{ recipe.author }} at {{ recipe.url }}. <br><br>
+    </div>
+  </div>
 
+  This recipe produces {{ recipe.servings }} servings. <br><br>
+  There are {{ recipe.calories }} calories in this recipe. <br><br>
+  <div *ngIf="recipe.totalTime > 0">
+    This recipe takes {{ recipe.totalTime | number : '1.1-1' }} hours to make. 
+    <br><br> 
+  </div>
 
   The recipe requires the following ingredients:
   <div *ngFor="let ing of recipe?.ingredients">
@@ -11,7 +22,6 @@
       </ul>
   </div>
 
-  There are {{ recipe.calories }} calories in this recipe. <br>
   <div *ngIf="recipe.recipeId != -1">
   The rating is {{ recipe.rating }}. Rate recipe? <br>
   <button type="button" (click)="rateRecipe(1)" class="btn btn-primary btn-sm">1</button>
@@ -20,3 +30,5 @@
   <button type="button" (click)="rateRecipe(4)" class="btn btn-primary btn-sm">4</button>
   <button type="button" (click)="rateRecipe(5)" class="btn btn-primary btn-sm">5</button>
 </div>
+
+<br><br><br><br><br><br><br>
